--- a/qinyujia/kafka/kafka-statefulset.yml
+++ b/qinyujia/kafka/kafka-statefulset.yml
@@ -4,9 +4,11 @@ metadata:
   labels:
     app: kafka
   name: kafka
-  namespace: kafka
+  namespace: the-project
 spec:
+  podManagementPolicy: OrderedReady
   replicas: 3
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       app: kafka
@@ -17,41 +19,77 @@ spec:
         app: kafka
     spec:
       containers:
+      - command:
+        - sh
+        - -exc
+        - |
+          unset KAFKA_PORT && \
+          export KAFKA_BROKER_ID=${HOSTNAME##*-} && \
+          export KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://${POD_IP}:9092 && \
+          exec /etc/confluent/docker/run
         env:
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: status.podIP
         - name: KAFKA_HEAP_OPTS
-          value: -Xmx20G -Xms1G
+          value: -Xmx1G -Xms1G
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: kafka-zookeeper:2181
-        - name: KAFKA_ADVERTISED_HOST_NAME
-          value: kafka          
         - name: KAFKA_LOG_DIRS
           value: /kafka/disk1,/kafka/disk2
-        - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
-          value: "false"
+        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
+          value: "3"
         - name: KAFKA_JMX_PORT
-          value: "9999"
-        image: wurstmeister/kafka
+          value: "5555"
+        image: confluentinc/cp-kafka:4.1.2-2
+        imagePullPolicy: IfNotPresent
+        livenessProbe:
+          exec:
+            command:
+            - sh
+            - -ec
+            - /usr/bin/jps | /bin/grep -q SupportedKafka
+          failureThreshold: 3
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 5
         name: kafka-broker
         ports:
         - containerPort: 9092
           name: kafka
           protocol: TCP
+        readinessProbe:
+          failureThreshold: 3
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          successThreshold: 1
+          tcpSocket:
+            port: kafka
+          timeoutSeconds: 5
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /kafka/disk1
           name: logdir1
         - mountPath: /kafka/disk2
-          name: logdir2          
-      volumes:
-      - name: logdir1
-        hostPath:
-          # directory location on host
-          path: /mnt/viid/kafka/disk1
-          # this field is optional
-          type: DirectoryOrCreate     
-      - name: logdir2
-        hostPath:
-          # directory location on host
-          path: /mnt/viid/kafka/disk2
-          # this field is optional
-          type: DirectoryOrCreate                 
+          name: logdir2  
+      dnsPolicy: ClusterFirst
       restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 60
+  updateStrategy:
+    type: OnDelete
+  volumes:
+  - name: logdir1
+    hostPath:
+      path: /mnt/viid/kafka/disk1
+      type: DirectoryOrCreate
+  - name: logdir2
+    hostPath:
+      path: /mnt/viid/kafka/disk2
+      type: DirectoryOrCreate           
